<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS114</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mes_info">MesInfoActivity</string>
    <string name="title_activity_mes_infos">MesInfosActivity</string>
    <string name="title_activity_cause">CauseActivity</string>
    <string name="accident_route">Accident de la route</string>
    <string name="incendie">Incendie</string>
    <string name="Cat_nat">Catastrophes Naturelles</string>
    <string name="blessures_animales">Blessures animales</string>
    <string name="autres">Autres</string>
    <string name="accueil">Accueil</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="annuler">Annuler</string>
    <string name="title_activity_detail_accident_voiture">DetailAccidentVoitureActivity</string>
    <string name="voiture">Voiture</string>
    <string name="moto">Moto</string>
    <string name="velo">Vélo</string>
    <string name="camion">Camion</string>
    <string name="bus">Bus</string>
    <string name="nb_victime">Nombre de victime(s)</string>
    <string name="causes">Causes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_incendie">DetailIncendieActivity</string>
    <string name="batiment">Bâtiment</string>
    <string name="vehicule">Véhicule</string>
    <string name="vegetation">Végétation</string>
    <string name="title_activity_detail_animaux">DetailAnimauxActivity</string>
    <string name="chien">Chien</string>
    <string name="chat">Chat</string>
    <string name="oiseau">Oiseau</string>
    <string name="serpent">Serpent</string>
    <string name="araignee">Araignée</string>
    <string name="abeille">Insecte</string>
    <string name="title_activity_detail_catastrophe">DetailCatastropheActivity</string>
    <string name="volcan">Volcan</string>
    <string name="inondation">Inondation</string>
    <string name="seisme">Séisme</string>
    <string name="vent_violent">Vent violent</string>
    <string name="avalanche">Avalanche</string>
    <string name="title_activity_detail_autre">DetailAutreActivity</string>
    <string name="title_activity_nombre_victime">NombreVictimeActivity</string>
    <string name="DetailsCause">Détail cause</string>
    <string name="DetailVictime">Détail victime</string>
    <string name="localisation">Adresse</string>
    <string name="environ">Environ</string>
    <string name="inconnu">Je ne sais pas</string>
    <string name="title_activity_detail_victime">DetailVictimeActivity</string>
    <string name="age_approx">Age (approximatif)</string>
    <string name="nourrisson">Nourrisson</string>
    <string name="enfant">Enfant</string>
    <string name="adolescent">Adolescent</string>
    <string name="adulte">Adulte</string>
    <string name="senior">Senior</string>
    <string name="symptome">Symptômes</string>
    <string name="handicap">Handicapé(s) moteur(s)</string>
    <string name="enceinte">Femme(s) enceinte(s)</string>
    <string name="title_activity_symptome">SymptomeActivity</string>
    <string name="precision">Précisions</string>
    <string name="pb_respiratoire">Problèmes \n respiratoires</string>
    <string name="arret_cardiaque">Arrêt \n cardiaque</string>
    <string name="vomissement">Vomissement</string>
    <string name="douleurs">Douleurs \n internes</string>
    <string name="inconscient">Inconscient</string>
    <string name="saignement">Saignement</string>
    <string name="spasmes">Spasmes</string>
    <string name="brulure">Brûlure</string>
    <string name="contraction">Contraction</string>
    <string name="perte_eaux">Perte des \n eaux</string>
    <string name="title_activity_precision">PrecisionActivity</string>
    <string name="autre">Autre</string>
    <string name="details">Détails</string>
    <string name="mesInfos">Mes Informations</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="telephone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="ville">Ville</string>
    <string name="code_postal">Code postal</string>
    <string name="porte">Porte</string>
    <string name="etage">Etage</string>
    <string name="code_porte">Code porte</string>
    <string name="title_activity_localisation">LocalisationActivity</string>
    <string name="domicile">Domicile</string>
    <string name="geoloc">GPS</string>
    <string name="message">Message</string>
    <string name="aide">Donner toutes informations permettant de vous localiser \nPenser à : étage, code porte, monument proches...</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="envoi_message">Envoi \nmessage</string>
    <string name="aide_precision">Position de la victime, gestes de secours effectués...</string>
    <string name="description114">Le 114 est un service de secours contactable par SMS.\nIl redirige votre demande au bon service (15,18) qui interviendra au plus vite</string>
    <string name="title_activity_body">BodyActivity</string>
    <string name="emplacement_douloureux">Zone(s) douloureuse(s)</string>
    <string name="tete">Tête</string>
    <string name="torse">Torse</string>
    <string name="ventre">Ventre</string>
    <string name="bras_droit">Bras droit</string>
    <string name="bras_gauche">Bras gauche</string>
    <string name="main_droite">Main droite</string>
    <string name="main_gauche">Main gauche</string>
    <string name="jambe_droite">Jambe droite</string>
    <string name="jambe_gauche">Jambe gauche</string>
    <string name="pied_droit">Pied droit</string>
    <string name="pied_gauche">Pied gauche</string>

</resources>
