<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hupays_nenich.com.sms114.detailVictime.DetailVictimeActivity"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Detail victime"
        android:id="@+id/txtDetailVictime"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDetailVictime"
        android:layout_marginTop="29dp"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/age_approx"
            android:id="@+id/txtAgeApprox"
            android:layout_marginBottom="15dp"
            android:textSize="30sp"
            android:textColor="#ff000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/linearlayout">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nourrisson"
                android:id="@+id/checkBoxNourrisson"
                android:checked="false"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enfant"
                android:id="@+id/checkBoxEnfant"
                android:checked="false"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adolescent"
                android:id="@+id/checkBoxAdo"
                android:checked="false"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adulte"
                android:id="@+id/checkBoxAdulte"
                android:checked="false"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senior"
                android:id="@+id/checkBoxSenior"
                android:checked="false"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Details"
            android:id="@+id/txtAutresDetails"
            android:textSize="30sp"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handicap"
            android:id="@+id/checkBoxHandicap"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enceinte"
            android:id="@+id/checkBoxEnceinte"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginBottom="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/barreNbVictime"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:text="@string/DetailsCause"
                android:id="@+id/btnRetourNbVictime"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="true"
                android:background="@drawable/bouton_nav"
                android:drawableLeft="@drawable/retour"
                android:textSize="18sp"
                android:textColor="#ffffffff" />

            <Button
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:text="@string/symptome"
                android:id="@+id/btnSymptome"
                android:layout_alignTop="@+id/btnRetourCauses"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:drawableRight="@drawable/suivant"
                android:background="@drawable/bouton_nav"
                android:textColor="#ffffffff"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
