<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hupays_nenich.com.sms114.LocalisationActivity"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/localisation"
        android:id="@+id/txtLocalisation"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edtAdresse"
        android:layout_below="@+id/txtLocalisation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aide"
        android:id="@+id/txtAide"
        android:layout_below="@+id/edtAdresse"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/layoutBtn">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domicile"
            android:id="@+id/btnDomicile"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:drawableTop="@drawable/domicile"
            android:autoText="false"
            android:background="@drawable/bouton_icon"
            android:padding="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geoloc"
            android:id="@+id/btnGeoloc"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:drawableTop="@drawable/gps"
            android:background="@drawable/bouton_icon"
            android:padding="2dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layoutBtn">

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/precision"
            android:id="@+id/btnRetourPrecision"
            android:background="@drawable/bouton_nav"
            android:drawableLeft="@drawable/retour"
            android:textSize="18sp"
            android:textColor="#ffffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/message"
            android:id="@+id/btnMessage"
            android:drawableRight="@drawable/suivant"
            android:background="@drawable/bouton_nav"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
