<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hupays_nenich.com.sms114.causes.DetailAnimauxActivity"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Blessures animales"
        android:id="@+id/txtDetailAnimaux"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/txtDetailAnimaux"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp">

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/btnChien"
                android:layout_gravity="center_vertical|left"
                android:checked="false"
                android:text="@string/chien"
                android:textAllCaps="false"
                android:textOff="@string/chien"
                android:textOn="@string/chien"
                android:layout_marginRight="20dp"
                android:background="@drawable/bouton_icon"
                android:layout_marginLeft="20dp"
                android:drawableTop="@drawable/chien"
                android:padding="2dp" />

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/chat"
                android:id="@+id/btnChat"
                android:layout_gravity="center_vertical"
                android:textOff="@string/chat"
                android:textOn="@string/chat"
                android:checked="false"
                android:layout_marginRight="20dp"
                android:background="@drawable/bouton_icon"
                android:drawableTop="@drawable/chat"
                android:padding="2dp" />

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/serpent"
                android:id="@+id/btnSerpent"
                android:textOff="@string/serpent"
                android:textOn="@string/serpent"
                android:checked="false"
                android:background="@drawable/bouton_icon"
                android:singleLine="true"
                android:drawableTop="@drawable/serpent"
                android:padding="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp" >

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/abeille"
                android:id="@+id/btnAbeille"
                android:layout_gravity="center_vertical"
                android:textOff="@string/abeille"
                android:textOn="@string/abeille"
                android:checked="false"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bouton_icon"
                android:drawableTop="@drawable/abeille"
                android:padding="2dp" />

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/araignee"
                android:id="@+id/btnAraignee"
                android:layout_gravity="center_vertical"
                android:textOff="@string/araignee"
                android:textOn="@string/araignee"
                android:checked="false"
                android:background="@drawable/bouton_icon"
                android:layout_marginRight="20dp"
                android:drawableTop="@drawable/areignee"
                android:padding="2dp" />

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/oiseau"
                android:id="@+id/btnOiseau"
                android:textOff="@string/oiseau"
                android:textOn="@string/oiseau"
                android:background="@drawable/bouton_icon"
                android:checked="false"
                android:drawableTop="@drawable/oiseau"
                android:padding="2dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/causes"
            android:id="@+id/btnRetourCauses"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/retour"
            android:background="@drawable/bouton_nav"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/nb_victime"
            android:id="@+id/btnNbVictime"
            android:layout_alignTop="@+id/btnRetourCauses"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:drawableRight="@drawable/suivant"
            android:background="@drawable/bouton_nav"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>
