<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hupays_nenich.com.sms114.causes.DetailIncendieActivity"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/incendie"
        android:id="@+id/txtDetailIncendie"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/txtDetailIncendie"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp">

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/btnVehicule"
                android:layout_gravity="center_vertical|left"
                android:drawableTop="@drawable/vehicules"
                android:checked="false"
                android:text="@string/vehicule"
                android:textAllCaps="false"
                android:textOff="@string/vehicule"
                android:textOn="@string/vehicule"
                android:layout_marginRight="20dp"
                android:background="@drawable/bouton_icon"
                android:layout_marginLeft="20dp"
                android:padding="2dp" />

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/vegetation"
                android:id="@+id/btnVegetation"
                android:layout_gravity="center_vertical"
                android:drawableTop="@drawable/vegetation"
                android:textOff="@string/vegetation"
                android:textOn="@string/vegetation"
                android:checked="false"
                android:layout_marginRight="20dp"
                android:background="@drawable/bouton_icon"
                android:padding="2dp" />

            <ToggleButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/batiment"
                android:id="@+id/btnBatiment"
                android:textOff="@string/batiment"
                android:textOn="@string/batiment"
                android:checked="false"
                android:background="@drawable/bouton_icon"
                android:drawableTop="@drawable/batiment"
                android:padding="2dp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/causes"
            android:id="@+id/btnRetourCauses"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/retour"
            android:background="@drawable/bouton_nav"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/nb_victime"
            android:id="@+id/btnNbVictime"
            android:layout_alignTop="@+id/btnRetourCauses"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:drawableRight="@drawable/suivant"
            android:background="@drawable/bouton_nav"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:enabled="false" />
    </RelativeLayout>
</RelativeLayout>
